# xml-mapping

./: .gitignore  hexpat-mapping.cabal  xml-mapping.cabal
src/Text/XML/: Mapping.hs
src/Text/XML/Expat/: Mapping.hs
src/Text/XML/Expat/Mapping/: Parser.hs  Types.hs
src/Text/XML/Expat/Mapping/Internal/: Namespaces.hs  Parser.hs
src/Text/XML/Mapping/: NSMap.hs  Types.hs
src/Text/XML/Mapping/Internal/: Class.hs  Err.hs  Level.hs  LevelSet.hs  NearSemiring.hs  ParseError.hs  Parser.hs
src/Text/XML/Mapping/Schema/: Mixed.hs  Namespace.hs  SimpleType.hs  SimpleTypes.hs
tests/: Tests.hs
tests/Test/Text/XML/Expat/: Mapping.hs
tests/Tests/Text/XML/Expat/: Mapping.hs
